# okr-helper

./: .gitignore  package-lock.json  package.json  turbo.json  vercel.json
backend/: env.py  gemini.py  main.py  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/api/: getGeminiText.ts
frontend/src/components/common/: Header.tsx
