[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mitchi",email = "pg.saku0719@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
